--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,5 +1,37 @@
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
+.darker {
+  border-color: #ccc;
+  background-color: #ddd;
+}
+
+.container::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.imgop {
+  float: left;
+  max-width: 60px;
+  width: 100%;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+.imgkiri {
+  float: right;
+  margin-left: 20px;
+  margin-right:0;
+}
+
+.time-right {
+  float: right;
+  color: #aaa;
+}
+
+.time-left {
+  float: left;
+  color: #999;
+}
 
 /* Carousel base class */
 .carousel {
