--- a/application/views/header.phtml
+++ b/application/views/header.phtml
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -36,16 +35,18 @@
               <a class="nav-link" href="<?= base_url() ?>">Halaman Utama</a>
             </li>
           </ul>
-          <div class="navbar-form navbar-left">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="<?= base_url('login') ?>">Masuk</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="<?= base_url('register') ?>">Daftar</a>
-              </li>
-            </ul>
-          </div>
+          <?php if ($login_cek) { ?>
+            <div class="navbar-form navbar-left">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="<?= base_url('login') ?>">Masuk</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="<?= base_url('register') ?>">Daftar</a>
+                </li>
+              </ul>
+            </div>
+          <?php } ?>
         </div>
       </div>
     </nav>
